[package]
name = "desim"
version = "0.2.0"
authors = ["Gianmarco Garrisi <gianmarcogarrisi@tutanota.com>"]
description = "A discrete-time events simulation framework inspired by Simpy"
repository = "https://github.com/garro95/desim"
readme = "README.md"
keywords =  ["simulation", "framework", "time", "discrete", "events"]
categories = ["simulation", "science"]
license = "GPL-3.0"

[dependencies]

[dev-dependencies]
rand = "0.4"